tests/rosetta/out/C/character-codes-5.error
cc: exit status 1
/tmp/character-codes-5.c: In function ‘main’:
/tmp/character-codes-5.c:22:26: error: invalid operands to binary + (have ‘const char *’ and ‘const char *’)
   22 |   printf("%s\n", chr(97) + chr(960));
      |                  ~~~~~~~ ^ ~~~~~~~~
      |                  |         |
      |                  |         const char *
      |                  const char *
