tests/rosetta/out/C/character-codes-5.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:01Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:01Z
#include <stdio.h>
#include <stdlib.h>

const char *chr(int n) {
  if (n == 97) {
    return "a";
  }
  if (n == 960) {
    return "π";
  }
  if (n == 65) {
    return "A";
  }
  return "?";
}

int main() {
  printf("%s\n", chr(97));
  printf("%s\n", chr(960));
  printf("%s\n", chr(97) + chr(960));
  return 0;
}
